# AI_Master

./: .gitignore  pyproject.toml
Hugging Face/notebooks/: hugging-face.ipynb
Introduction to Machine Learn with Pytorch/Decision Trees with ScikitLearn/: Decision Trees with ScikitLearn.ipynb  Titanic Survival Exploration.ipynb
Introduction to Machine Learn with Pytorch/Linear Regression with ScikitLearn/: Linear Regression.ipynb  Multiple Linear Regression.ipynb  Regularizations.ipynb
Neural Network - Classifier/notebooks/: classifier-example.ipynb
Neural Network - Transformers/.ipynb_checkpoints/: 1_data_loader_starter-checkpoint.ipynb  classifier-example-checkpoint.ipynb  transformer_example-checkpoint.ipynb
Neural Network - Transformers/notebooks/: transformer_example.ipynb
