[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-master"
version = "0.1.0"
description = "AI Master - Neural Network projects including classifiers and transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mayke F. dos Santos", email = "sfmayke@gmail.com"}
]
keywords = ["neural-networks", "pytorch", "transformers", "machine-learning"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

ml = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/sfmayke/ai-master"
Repository = "https://github.com/sfmayke/ai-master.git"
